objects/SLSI__Intranet_Request_Object__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__UserEmail__c</fullName>
        <label>UserEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Intranet Request Object</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SLSI__Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intranet Request Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Request Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>